# Raven-RiscV

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  RELEASE-1.26.0.md  RELEASE_v1.20.0.md  binary_search_tree.fas  bst.fas  cache-pipeline-bugs.md  cargo.toml  export-test  falcon-testing-response.md  fat.fas  fat_push_pop_pseudoinstructions.fas  fib.fas  instructions.set  print.fas  seg.html  teste.fas
.github/workflows/: build.yml  deploy.yml  release-build.yml
.handoff/: cuddly-forging-russell.md  project_ui_toolkit.md
Cache config examples/: cache_large_4kb_4way.fcache  cache_no_write_allocate.fcache  my-cache-examples.fcache  weird_behavior.fcache
Issues/: CLAUDE_ISSUES.tx
Program Examples/: all_instructions.fas  array_sum.fas  binary_search_tree.fas  bubble_sort_20.fas  bubble_sort_5.fas  cache_conflict.fas  cache_direct_mapped_1kb.fcache  cache_locality.fas  cache_write_policy.fas  cache_write_through.fcache  code_example_.fas  dcache_multilevel_demo.fas  fat_push_pop_pseudoinstructions.fas  fatorial.fas  fib.fas  gcd_euclid.fas  icache_multilevel_demo.fas  io_echo.fas  max_in_array.fas  pipeline_branch_flush_demo.fas  pipeline_cache_stall_demo.fas  pipeline_load_use_demo.fas  power_fast.fas  print.fas  quick_sort_20_push_pop.fas  selection_sort_20.fas  string_length.fas  sum_1_to_10.fas  syscall_echo_linux.fas
Program Examples/algorithms/: array_sum.s  binary_search_tree.s  bubble_sort_20.s  fatorial.s  fib.s  gcd_euclid.s  max_in_array.s  power_fast.s  quick_sort_20_push_pop.fas  quick_sort_20_push_pop.s  selection_sort_20.s  string_length.s
Program Examples/atividade-guiada/: 00-INDEX.txt  D101.fas  D301.fas  D302.fas
Program Examples/basics/: code_example_.fas  code_example_.s  fat_push_pop_pseudoinstructions.s  print.fas  print.s  sum_1_to_10.s
Program Examples/cache/: cache_conflict.s  cache_locality.fas  cache_locality.s  cache_write_policy.s  dcache_multilevel_demo.s  icache_multilevel_demo.s
Program Examples/graphics/: snake.fas  snake.s
Program Examples/harts/: hart_spawn_visual_demo.fas
Program Examples/pipeline/: pipeline_branch_flush_demo.s  pipeline_cache_stall_demo.s  pipeline_forwarding_demo.fas  pipeline_forwarding_demo.s  (+1 more)
benches/: bench.sh
c-to-raven/: .gitignore  API.md  Makefile  README.md  array_bench.c  crt0.S  float_demo.c  main.c  raven.h
crates/raven-riscv-engine/: Cargo.toml  README.md
crates/raven-riscv-engine/src/: lib.rs
crates/raven-riscv-engine/src/falcon/: arch.rs  engine.rs  errors.rs  exec.rs  instruction.rs  memory.rs  mod.rs  registers.rs  syscall.rs
crates/raven-riscv-engine/src/falcon/asm/: assembler.rs  errors.rs  mod.rs  program.rs  pseudo.rs  utils.rs
crates/raven-riscv-engine/src/falcon/cache/: cache.rs  config.rs  controller.rs  mod.rs  policies.rs  presets.rs  stats.rs
crates/raven-riscv-engine/src/falcon/decoder/: atype.rs  btype.rs  fptype.rs  itype.rs  jtype.rs  mod.rs  rtype.rs  stype.rs
crates/raven-riscv-engine/src/falcon/encoder/: mod.rs
crates/raven-riscv-engine/src/falcon/jit/: backend.rs  block.rs  cache.rs  codegen.rs  factory.rs  full.rs  hot.rs  interpreter.rs  mod.rs  profile.rs
crates/raven-riscv-engine/src/falcon/machine/: journal.rs  mod.rs  parse.rs  types.rs
crates/raven-riscv-engine/src/falcon/mmu/: mod.rs  satp.rs  tlb.rs  walker.rs
crates/raven-riscv-engine/src/falcon/program/: elf.rs  loader.rs  mod.rs
crates/raven-riscv-engine/src/host/: console.rs  screen.rs
crates/raven-riscv-engine/tests/support/: falcon_asm.rs  falcon_cache.rs  falcon_exec.rs  falcon_memory.rs  falcon_program_elf.rs  falcon_syscall.rs
docs/: README.md  README.pt-BR.md  RELEASE-pipeline-hart.md  RustCompatibleABI.rs  Tutorial-pt.md  Tutorial.md  Tutottiral-pt.md  cache-config.md  cache.md  cache.pt-BR.md  cli.md  cli.pt-BR.md  format.md  format.pt-BR.md  hart.md  hart.pt-BR.md  jit-roadmap.md  memory-allocation.md  memory-allocation.pt-BR.md  optimization-roadmap.md  pipeline-ui-plan.md  pipeline.md  syscalls.md  syscalls.pt-BR.md
guided-activity/: 00-INDEX.txt
hello-raven/: Cargo.toml  rust-toolchain.toml  setup.sh
plans/: bugs.md
release-artifacts/: README.md
rust-to-raven/: API.md  Cargo.toml  Makefile  README.md
rust-to-raven/.cargo/: config.toml
rust-to-raven/src/: main.rs
rust-to-raven/src/raven_api/: allocator.rs  coroutine.rs  graphics.rs  hart.rs  io.rs  mod.rs  random.rs  syscall.rs
rust-to-raven/src/raven_api/atomic/: mod.rs  ordering.rs  types.rs
rust-to-raven/src/raven_api/hardware_thread/: channel.rs  hart.rs  mod.rs
scripts/: build-all.ps1  build-all.sh
src/: cli.rs  lib.rs  main.rs
tcc-docs/: form_unificado.gs
tests/: mmu_pipeline_stalls.rs  mmu_traps.rs  system_instructions.rs
website/: app.js  index.html  palette.css  style.css
(+292 files in other folders)
