[package]
name = "raven"
version = "1.27.6"
edition = "2024"

[features]
default = []
# Phase B (future) will pull in dynasm-rs behind this feature so default
# builds stay free of the codegen dependency.
jit = ["dep:dynasm", "dep:dynasmrt"]

[dependencies]
dynasm    = { version = "5", optional = true }
dynasmrt  = { version = "5", optional = true }
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = "0.29"
thiserror = "1"
comfy-table = "7"
getrandom = { version = "0.3", features = ["std"] }
unicode-truncate = "1"
unicode-width = "0.2"

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.release]
opt-level = 3        # máxima optmizing
lto = "fat"          # complete LTO  
codegen-units = 1    # better perform
panic = "abort"      # less overhead
debug = false
incremental = false


[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd     = "0.15"
arboard = "3"

# Linux glibc: desktop integrations enabled.
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
rfd     = "0.15"
arboard = { version = "3", default-features = false }

# SIGINT handling no Unix (WSL2 envia SIGINT mesmo em raw-mode via ConPTY)
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
