[package]
name = "rust-to-raven"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
linked_list_allocator = { version = "*", default-features = false }
portable-atomic = { version = "1", default-features = false, features = ["unsafe-assume-single-core"] }