[package]
name = "raven-riscv-engine"
version = "0.1.1"
edition = "2024"
description = "Headless RISC-V simulation engine extracted from Raven-RiscV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gaok1/Raven-RiscV"
readme = "README.md"
keywords = ["riscv", "emulator", "simulator", "education"]
categories = ["emulators", "development-tools"]

[features]
default = []
jit = ["dep:dynasm", "dep:dynasmrt"]

[dependencies]
dynasm = { version = "5", optional = true }
dynasmrt = { version = "5", optional = true }
thiserror = "1"
getrandom = { version = "0.3", features = ["std"] }

[target.'cfg(not(all(target_os = "linux", target_env = "musl")))'.dependencies]
minifb = "0.28"
